<resources>
    <string name="app_name">MeizuMusic</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_music">Music</string>
    <string name="menu_album">Album</string>
    <string name="menu_artist">Artist</string>
    <string name="menu_folder">Folder</string>

    <string name="menu_statistics">Statistics</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
</resources>