<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_music">

    <fragment
        android:id="@+id/nav_music"
        android:name="com.jywkhyse.meizumusic.ui.music.MusicFragment"
        android:label="@string/menu_music"
        tools:layout="@layout/fragment_music_list" />

    <fragment
        android:id="@+id/nav_album"
        android:name="com.jywkhyse.meizumusic.ui.album.AlbumFragment"
        android:label="@string/menu_album"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_artist"
        android:name="com.jywkhyse.meizumusic.ui.artist.ArtistFragment"
        android:label="@string/menu_artist"
        tools:layout="@layout/fragment_list" />

    <fragment
        android:id="@+id/nav_folder"
        android:name="com.jywkhyse.meizumusic.ui.folder.FolderFragment"
        android:label="@string/menu_folder"
        tools:layout="@layout/fragment_list" />


    <fragment
        android:id="@+id/nav_statistics"
        android:name="com.jywkhyse.meizumusic.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.jywkhyse.meizumusic.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.jywkhyse.meizumusic.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />


</navigation>